# chess-board

./: README.md
chess-board/: README.md  chess_board.ipynb  pyproject.toml
